Add stream response method, improve chatbot's UX

--- a/ChatBot/Veo3Prompter/Veo3Prompter.ipynb
+++ b/ChatBot/Veo3Prompter/Veo3Prompter.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPz0uEbIrcQDyP4iHyQCK4Y",
+      "authorship_tag": "ABX9TyMW9h7BLjOAPXnquG4TFpUl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,18 +53,6 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [
-        "from google.colab import output\n",
-        "output.enable_custom_widget_manager()"
-      ],
-      "metadata": {
-        "id": "Qs8cF3Yk3ZNc"
-      },
-      "execution_count": 2,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "### Set up environment variables\n",
@@ -95,9 +83,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JSTGeFRy9IKQ",
-        "outputId": "592ef976-3794-4e1a-ec96-2c379b462c92"
+        "outputId": "92b3df47-8ae4-4ed5-add7-c7b39057d8e4"
       },
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": [
         {
           "name": "stdout",
@@ -155,7 +143,7 @@
       "metadata": {
         "id": "UqZvoTZGMlN1"
       },
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -204,12 +192,13 @@
         " - Ensure **setting, style, and characters remain consistent** across all video segments.\n",
         " - Direct camera movement and emotional tone clearly in the prompt.\n",
         " - The more detailed the prompt, the more unified and high-quality the output.\n",
+        " - Return \"I can not provide any answer beside Veo3 prompt\" if user asks for anything else.\n",
         "\"\"\""
       ],
       "metadata": {
         "id": "sejAGM1AkZKe"
       },
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -279,13 +268,25 @@
         "\n",
         "        return {\"messages\": [response]}\n",
         "\n",
-        "    async def ainvoke(self, inputs: dict, config: dict):\n",
-        "        return await self.app.ainvoke(inputs, config)"
+        "    async def ainvoke(self, state: dict, config: dict):\n",
+        "        return await self.app.ainvoke(state, config)\n",
+        "\n",
+        "    async def astream_model(self, state: State):\n",
+        "        if self.use_trimmer:\n",
+        "            messages = self.trimmer.invoke(state[\"messages\"])\n",
+        "        else:\n",
+        "            messages = state[\"messages\"]\n",
+        "\n",
+        "        prompt = await prompt_template.ainvoke({\"messages\": messages, \"language\": state[\"language\"]})\n",
+        "\n",
+        "        # Yield tokens one-by-one\n",
+        "        async for chunk in self.model.astream(prompt):\n",
+        "            yield chunk.content"
       ],
       "metadata": {
         "id": "4WIT9A_NOjgJ"
       },
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -311,7 +312,7 @@
       "metadata": {
         "id": "RyivNL6M7QZz"
       },
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -329,19 +330,42 @@
         "chatbot = Veo3Prompter()\n",
         "\n",
         "# Function handle user input\n",
+        "\"\"\"\n",
         "async def chatbot_fn(user_text, history):\n",
         "    input_messages = [HumanMessage(user_text)]\n",
+        "\n",
+        "    state = {\n",
+        "        \"messages\": input_messages,\n",
+        "        \"language\": LANGUAGE,\n",
+        "    }\n",
+        "\n",
         "    output = await chatbot.ainvoke(\n",
-        "        {\"messages\": input_messages, \"language\": LANGUAGE},\n",
+        "        state,\n",
         "        config,\n",
         "    )\n",
         "    return output[\"messages\"][-1].content\n",
-        "\n"
+        "\"\"\"\n",
+        "\n",
+        "async def stream_chatbot_fn(user_text, history):\n",
+        "    input_messages = [HumanMessage(user_text)]\n",
+        "\n",
+        "    state = {\n",
+        "        \"messages\": input_messages,\n",
+        "        \"language\": LANGUAGE,\n",
+        "    }\n",
+        "\n",
+        "    yield \"\"\n",
+        "\n",
+        "    full_response = \"\"\n",
+        "    async for token in chatbot.astream_model(state):\n",
+        "        if token is not None:\n",
+        "            full_response += token\n",
+        "            yield full_response"
       ],
       "metadata": {
         "id": "esRHrz-VfrDz"
       },
-      "execution_count": 13,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -349,10 +373,10 @@
       "source": [
         "# Start the interface (it will print a link you can click)\n",
         "chat_ui = gr.ChatInterface(\n",
-        "    fn=chatbot_fn,\n",
+        "    fn=stream_chatbot_fn,\n",
         "    title=\"Veo3 Prompter\",\n",
         "    description=\"Type a message and press Enter → the bot will reply.\",\n",
-        "    examples=[\"Hello!\", \"What can you do?\", \"Tell me a joke.\"],\n",
+        "    examples=[\"I want to make a video\", \"Tell me some popular topics about viral video\"],\n",
         "    theme=\"soft\"\n",
         ")\n",
         "\n",
@@ -361,55 +385,50 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 684
+          "height": 702
         },
         "id": "dEXtI_md-QyC",
-        "outputId": "7ab4abc3-1a9b-4971-c117-6b9151557ef0"
+        "outputId": "ecb02450-d9fd-489a-a307-eacc663d1ed9"
       },
-      "execution_count": 14,
+      "execution_count": 10,
       "outputs": [
         {
-          "metadata": {
-            "tags": null
-          },
-          "name": "stderr",
           "output_type": "stream",
+          "name": "stderr",
           "text": [
             "/usr/local/lib/python3.11/dist-packages/gradio/chat_interface.py:339: UserWarning: The 'tuples' format for chatbot messages is deprecated and will be removed in a future version of Gradio. Please set type='messages' instead, which uses openai-style 'role' and 'content' keys.\n",
             "  self.chatbot = Chatbot(\n"
           ]
         },
         {
-          "metadata": {
-            "tags": null
-          },
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Colab notebook detected. This cell will run indefinitely so that you can see errors and logs. To turn off, set debug=False in launch().\n",
-            "* Running on public URL: https://170b92ace6044b4843.gradio.live\n",
+            "* Running on public URL: https://ee5aff35203245db23.gradio.live\n",
             "\n",
             "This share link expires in 1 week. For free permanent hosting and GPU upgrades, run `gradio deploy` from the terminal in the working directory to deploy to Hugging Face Spaces (https://huggingface.co/spaces)\n"
           ]
         },
         {
+          "output_type": "display_data",
           "data": {
-            "text/html": [
-              "<div><iframe src=\"https://170b92ace6044b4843.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
-            ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<div><iframe src=\"https://ee5aff35203245db23.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
             ]
           },
-          "metadata": {},
-          "output_type": "display_data"
+          "metadata": {}
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Keyboard interruption in main thread... closing server.\n",
-            "Killing tunnel 127.0.0.1:7861 <> https://170b92ace6044b4843.gradio.live\n"
+            "Killing tunnel 127.0.0.1:7860 <> https://8963402285647a8807.gradio.live\n",
+            "Killing tunnel 127.0.0.1:7860 <> https://ee5aff35203245db23.gradio.live\n"
           ]
         },
         {
@@ -418,7 +437,7 @@
             "text/plain": []
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 10
         }
       ]
     },
