Clean up folder

--- a/learning-rag/Langchain_Rag_Guide_Part_1.ipynb
+++ b/learning-rag/Langchain_Rag_Guide_Part_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPNQtlN/Y+/DZrUJ/xSr6DE",
+      "authorship_tag": "ABX9TyP57np2vzhjEU2kaANEvhQq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/duyvm/funny_stuff_with_llm/blob/main/learning-rag/Langchain_Rag_Guide_Part_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/duyvm/funny_stuff_with_llm/blob/main/learning-rag%5CLangchain_Rag_Guide_Part_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -41,7 +41,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "6ym6NvY0p5ek"
       },
@@ -65,7 +65,7 @@
       "metadata": {
         "id": "xmtEhKrEACgf"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -80,7 +80,7 @@
       "metadata": {
         "id": "eWCkYZ34AuoI"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -93,13 +93,15 @@
       "metadata": {
         "id": "a2YVj2HDA2h-"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
         "# Preview\n",
+        "\n",
+        "- Guide: [Build a Retrieval Augmented Generation (RAG) App: Part 1](https://python.langchain.com/docs/tutorials/rag/)\n",
         "\n",
         "- Build an app that answers questions about the [LLM Powered Autonomous Agents](https://lilianweng.github.io/posts/2023-06-23-agent/) blog post by Lilian Weng\n",
         ". Allows us to ask questions about the contents of the post.\n",
@@ -140,7 +142,7 @@
       "metadata": {
         "id": "kNRkPSsFBCk6"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -153,7 +155,7 @@
       "metadata": {
         "id": "rwB3LH7pDcsk"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -167,7 +169,7 @@
       "metadata": {
         "id": "XN2vD0YxJDHG"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -179,7 +181,7 @@
       "metadata": {
         "id": "6sJNQwjtDdXW"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -190,7 +192,7 @@
       "metadata": {
         "id": "GLfMKyD-GEN_"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -205,7 +207,7 @@
         "id": "2nRGTJuqGOJS",
         "outputId": "9288ef81-82e8-4ba1-87ff-e020321f1a6c"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -231,7 +233,7 @@
       "metadata": {
         "id": "bbvSfqzuGO8t"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -246,7 +248,7 @@
       "metadata": {
         "id": "J0ciGIZrGsHZ"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -262,7 +264,7 @@
       "metadata": {
         "id": "0cQN-acYHLO2"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -276,7 +278,7 @@
       "metadata": {
         "id": "osQRpZR-H-Yx"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -292,7 +294,7 @@
         "id": "X1SJNbKnIBCz",
         "outputId": "f5e5f0fb-1fd3-414c-c036-80f6aa1211ac"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -316,7 +318,7 @@
         "id": "v9kZNOYhIrQO",
         "outputId": "6ffed3f6-193b-45ba-f002-0080b4646d76"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -340,7 +342,7 @@
         "id": "CmrJRRLPJwMJ",
         "outputId": "a672e38b-abc1-454d-d061-1ebee1bade6b"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -365,7 +367,7 @@
         "id": "JuzOTZwTJ3qS",
         "outputId": "82de5183-fd2c-4c26-923a-b7d19650f7b5"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -389,7 +391,7 @@
         "id": "B5Xgc6BlJ6iU",
         "outputId": "9e6f73e5-0573-472f-a51f-8aa71ad2162a"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -413,7 +415,7 @@
         "id": "1mgKH36UU5dc",
         "outputId": "9b260df6-3e73-4c83-d0c1-9274f60c85b5"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -437,7 +439,7 @@
         "id": "ewLvA8JXVbct",
         "outputId": "423609b1-167f-471a-b4a7-f60f19c0962e"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -461,7 +463,7 @@
         "id": "vQgG825WV511",
         "outputId": "eafaba39-1ec1-4cf3-94d9-a596bf445502"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -494,7 +496,7 @@
         "id": "br5nKokDWT7m",
         "outputId": "99dd4455-a910-4d12-b133-e6f27c5fb3cd"
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -518,7 +520,7 @@
         "id": "ILHA3SwWVn1z",
         "outputId": "d45501da-99f7-4199-a272-66961a0a58ea"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -542,7 +544,7 @@
         "id": "nbtUBs9ZKJyY",
         "outputId": "98aa10e9-15ae-4450-a461-76412bf963d3"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -566,7 +568,7 @@
         "id": "ESJt5s0tKNKl",
         "outputId": "d5b7d4b6-03fa-4bed-f342-e0b9af79d84d"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -594,7 +596,7 @@
         "id": "Cy7AzhTWKZyh",
         "outputId": "801c6584-a29f-4a39-ac5e-9ce4e8932676"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -623,7 +625,7 @@
       "metadata": {
         "id": "avA5mdJ6MFJG"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -636,7 +638,7 @@
       "metadata": {
         "id": "AeaDNLhFN3h2"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -653,7 +655,7 @@
         "id": "O2d1FsOpMx2p",
         "outputId": "6a53e197-4d06-4306-8f60-82026939fec8"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -678,7 +680,7 @@
         "id": "kEpGVwnYMzUo",
         "outputId": "0b92ebfd-717c-4faf-a8c2-0e73d12b45fb"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -703,7 +705,7 @@
         "id": "GqyIlxwHOH-r",
         "outputId": "114f34e1-8ff6-4925-f028-fa3e05c3bdc1"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -740,7 +742,7 @@
         "id": "ERTR1lUURe2E",
         "outputId": "95061220-b307-42aa-d452-acaa7cae3682"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -765,7 +767,7 @@
         "id": "3dRYF0YRObHY",
         "outputId": "e34ea9a1-39ad-4e63-bbfe-2464f9def857"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
