--- a/learning-rag/Langchain_Rag_Guide_Part_1.ipynb
+++ b/learning-rag/Langchain_Rag_Guide_Part_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP57np2vzhjEU2kaANEvhQq",
+      "authorship_tag": "ABX9TyNY8AKhWI5XRT/iugtcgC+w",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/duyvm/funny_stuff_with_llm/blob/main/learning-rag%5CLangchain_Rag_Guide_Part_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/duyvm/funny_stuff_with_llm/blob/main/learning-rag/Langchain_Rag_Guide_Part_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -800,7 +800,9 @@
         "\n",
         "👍 The app can understand the variants of the question\n",
         "\n",
-        "🤔 The accuracy of answer depends a lot on retrieved informations. It can be tricky when stored information and provided information (in question) is not in the same language"
+        "🤔 The accuracy of answer depends a lot on retrieved informations. It can be tricky when stored information and provided information (in question) is not in the same language\n",
+        "\n",
+        "👌 Above problems can be solved be using a technique call `query analysis`. To put it simply, we use llm to analyze our question and extract only relevant pieces of informations/keywords that we use to query against vector db. We add a node (step) called `anaylyze_query` and use its output as the input for `retrieve`"
       ],
       "metadata": {
         "id": "XrsV9NM2PKkk"
