Update project name

--- a/learning-rag/Demo_rag.ipynb
+++ b/learning-rag/Demo_rag.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1l_x56ISnBIJDHeRH2AOeijGIuPo5bIBN",
-      "authorship_tag": "ABX9TyOhYdNn22s9UxpOOTa/bs5i",
+      "authorship_tag": "ABX9TyPvBfQQnTYfASRhhru8XOWj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
       "metadata": {
         "id": "4W2S6uJ38sAK"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -176,7 +176,7 @@
         },
         "outputId": "eb297f75-df9a-4c15-c351-306c1be57d72"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -199,7 +199,7 @@
     {
       "cell_type": "code",
       "source": [
-        "PROJECT_NAME = \"demo-rag\"\n",
+        "PROJECT_NAME = \"demo-rag-20250625\"\n",
         "\n",
         "os.environ[\"LANGSMITH_TRACING\"] = \"true\"\n",
         "os.environ[\"LANGSMITH_ENDPOINT\"] = \"https://api.smith.langchain.com\"\n",
@@ -210,13 +210,13 @@
       "metadata": {
         "id": "08hBoEqa2t5j"
       },
-      "execution_count": 3,
+      "execution_count": 26,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "# Part 1: QA system with vector database (semantic search)"
+        "# Part 1: Basic QA system with vector database (semantic search)"
       ],
       "metadata": {
         "id": "qx1GLj3b2dB2"
@@ -264,7 +264,7 @@
       "metadata": {
         "id": "CR01e_A08FAQ"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -304,7 +304,7 @@
       "metadata": {
         "id": "Tb4-JgXo3csN"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -331,7 +331,7 @@
       "metadata": {
         "id": "m5UIseN6-BQR"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -392,7 +392,7 @@
       "metadata": {
         "id": "uFxdezY6-zt9"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -417,7 +417,7 @@
         "id": "qpC56kiZDGqM",
         "outputId": "e241fa03-95ff-4d39-93f6-94198e291029"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -488,7 +488,7 @@
       "metadata": {
         "id": "PIInKSpszzlS"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -627,7 +627,7 @@
       "metadata": {
         "id": "S_arOFeKeQGO"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -675,7 +675,7 @@
       "metadata": {
         "id": "fwysqybghtDw"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -700,7 +700,7 @@
         "id": "OfEt9kGzz1Yo",
         "outputId": "7760ca07-d660-4d20-fa79-9ba8811b0433"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -727,7 +727,7 @@
         "id": "e30vulROk94q",
         "outputId": "8cbb16c4-02fb-4f07-ddbc-45d06fab9152"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -803,7 +803,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Part 2: RAG with relational data (structured data search)\n",
+        "# Part 2: Basic QA system with relational data (structured data search)\n",
         "\n",
         "- Knowledge base: normal relational database\n",
         "\n",
@@ -851,7 +851,7 @@
         },
         "outputId": "ae88e936-a063-4597-86a1-ec71e89d15c7"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -895,7 +895,7 @@
         "id": "6dtAq0vkAzMw",
         "outputId": "9d6f8aa0-3486-4bf0-e03c-45e352d33ea5"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1143,7 +1143,7 @@
       "metadata": {
         "id": "JKesFexVBket"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1160,7 +1160,7 @@
         "id": "MXnHd438ClRE",
         "outputId": "2b2f764f-6c66-49bd-ceb3-81dff6949e4e"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1192,7 +1192,7 @@
       "metadata": {
         "id": "H9oXRfGvEcA5"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1252,7 +1252,7 @@
         "id": "AbT9YesSIStR",
         "outputId": "05e10820-13fe-428a-eee2-1b6deffce2c9"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1333,7 +1333,7 @@
         "id": "tolpQjC-h_VS",
         "outputId": "b6591b33-6de9-43a4-8326-1e517d4453e6"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1409,7 +1409,7 @@
       "metadata": {
         "id": "SPdHe1keDJns"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1438,7 +1438,7 @@
       "metadata": {
         "id": "sC5NqhoSiABZ"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1463,7 +1463,7 @@
         "id": "fifHfGswj1M4",
         "outputId": "64ecca1d-0079-434d-89f9-21778ec58ce3"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1505,7 +1505,7 @@
         "id": "Pcb0eDqSj-qt",
         "outputId": "0921999c-48dd-4d48-815a-8e8f47fb540d"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1568,25 +1568,29 @@
         "\n",
         "#### **Goods**\n",
         "\n",
-        "👍 The app can understand multi-languages\n",
+        "👍 The app can understand user intention and turn it into SQL query, based on provided database information\n",
         "\n",
-        "👍 The app can understand the variants of the question\n",
+        "#### **Considerations**\n",
         "\n",
-        "#### **Need improvement**\n",
+        "🤔 Carefully design application permission for connecting db (read-only, etc)\n",
         "\n",
-        "🤔 We are considering user's question is the whole information for searching in vector db. It can lead to retrieving incorrect informations if the actual information that we want is too small consider to the length of question. How to seperate the actual relevant information piece for searching with the rest in the question.\n",
+        "🤔 Generated SQl query can go wrong. Add a review step before execute it\n",
         "\n",
-        "🤔 The accuracy of answer depends a lot on retrieved informations. It can be tricky when stored information and provided information (in question) is not in the same language\n",
+        "  - It can be human review and approval\n",
         "\n",
-        "#### **Some solutions**\n",
+        "  - Or combine with another model and step to perform checking\n",
         "\n",
-        "- Query analysis\n",
+        "🤔 Performance evaluation\n",
         "\n",
-        "- Query re-writing\n",
+        "🤔 Handling ambiguity and user intent (user's typo, etc..)\n",
         "\n",
-        "- Vector DB with metadata filters\n",
+        "🤔 Error handling\n",
         "\n",
-        "- Agentic approach"
+        "#### **Advanced techniques**\n",
+        "\n",
+        "- Agentic approach (self correction, self error-handling, re-verify with user, auto performance awareness...)\n",
+        "\n",
+        "- Hybrid approach: combine with other data sources like vector db, graph db, image to create truly knowledge base."
       ],
       "metadata": {
         "id": "13cJ_w3p6S9k"
